# AirQ

./: .gitignore  Makefile  partitions.csv  sdkconfig  sdkconfig.old
components/lv_examples/lv_examples/src/lv_demo_widgets/: lv_demo_widgets.c  lv_demo_widgets.h  ui_font_NumberDigit40.c  ui_font_NumberSevenSegment40.c  ui_font_SansBlack.c  ui_font_SansBold.c  ui_font_SansBold30.c  ui_font_SansMedium10.c  ui_font_SansMedium12.c  ui_font_SansRegular.c  ui_img_co2_png.c  ui_img_dislike_png.c  ui_img_drop_png.c  ui_img_fan_png.c  ui_img_high2_png.c  ui_img_like_png.c  ui_img_marginal2_png.c  ui_img_medicalmask_png.c  ui_img_next_png.c  ui_img_pokerface_png.c  ui_img_sad_png.c  ui_img_smile_png.c  ui_img_temperature_png.c  ui_img_v4_2_png.c  ui_img_v5_png.c  ui_img_wifi_png.c
components/lv_examples/lv_examples/src/lv_demo_widgets/assets/: ui_img_capture_png.c  ui_img_needle_png.c  ui_img_test_png.c  (+2 more)
components/lvgl_esp32_drivers/: lvgl_helpers.c
components/lvgl_esp32_drivers/lvgl_tft/: disp_spi.c  ili9341.c
main/: CMakeLists.txt  Define.h  JsonDefine.h  Kconfig.projbuild  main.c  myLib.h
main/BLEMesh/: BleMeshServer.c  bleMeshServer.h
main/Board/: board.c  board.h
main/Co2Sensor/: co2.c  co2.h
main/InternalStorage/: internalStorage.c  internalStorage.h
main/LaserDustSensor/: pmX.c  pmX.h
main/MainTask/: mainTask.c  mainTask.h
main/TempAndHum/: TempAndHum.c  TempAndHum.h
main/TimeSchedule/: timeSchedule.c  timeSchedule.h
main/UI/: UserInterface.c  UserInterface.h
main/VOCSensor/: VOC.c  VOC.h
main/WifiStation/: httpServer.c  httpServer.h
